# workshop-pydantic

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/workshop_pydantic/: __init__.py  correction.py  easy.py  hard.py  intermediate.py  model_1.py  model_10.py  model_2.py  model_3.py  model_30.py  model_4.py  model_40.py  pydantic_tutorial.md  test_correction.py  test_easy.py  test_hard.py  test_intermediate.py
src/workshop_pydantic/model_1/: club.py  company.py  event.py  people.py
src/workshop_pydantic/model_2/: club.py  company.py  enums.py  event.py  people.py
src/workshop_pydantic/model_3/: club.py  company.py  enums.py  event.py  people.py
src/workshop_pydantic/model_4/: club.py  company.py  event.py  people.py
src/workshop_pydantic/structured_output/: club.py  company.py  event.py  generate_club.py  people.py
tests/: test_correction.py  test_hard.py  test_intermediate.py  test_model_1.py  test_model_2.py  test_model_3.py  test_model_4.py
